--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,13 +7,15 @@
 
 <h3>Server Name:</h3>
     <app-create-server></app-create-server>
-
+    
+<h3>Warnings:</h3>
+<ul>
+    <app-another-component></app-another-component>
+    <app-big-text></app-big-text>
+</ul>
 
 <h3>Assignment 2:</h3>
     <app-assignment2></app-assignment2>
 
-<h3>Warnings:</h3>
-    <ul>
-        <app-another-component></app-another-component>
-        <app-big-text></app-big-text>
-    </ul>
+<h3>Assignment 3:</h3>
+<app-assignment3></app-assignment3>
