--- a/src/app/create-server/create-server.component.html
+++ b/src/app/create-server/create-server.component.html
@@ -1,20 +1,22 @@
-<ul>
-    <!--<input type="text" class="form-control" (input)='onUpdateServerName($event)'>-->
-    <input type="text" class="form-control" placeholder="Insert server name" [(ngModel)]='serverName'>
-    <br>
-
-    <button class="btn btn-primary" [disabled]="!allowNewServer" (click)='onCreateServer()'>Clock me</button> {{
-    allowNewServer }}
-
-    <p *ngIf='enableServerName; else noServer'> Server created succesfully, the name is {{serverName}}</p>
-    <ng-template #noServer>
-        <p> No server created yet.</p>
-    </ng-template>
-
+<section *ngFor="let server of servers">
     <ul>
-        <li><p [ngStyle]="{backgroundColor: getColor1()}" [ngClass]="{online: serverStatus1 === 'online'}">Server 1 is {{serverStatus1}}</p></li>
-        <li><p [ngStyle]="{backgroundColor: getColor2()}" [ngClass]="{online: serverStatus2 === 'online'}">Server 2 is {{serverStatus2}}</p></li>
+        <!--<input type="text" class="form-control" (input)='onUpdateServerName($event)'>-->
+        <input type="text" class="form-control" placeholder="Insert server name" [(ngModel)]='serverName'>
+        <br>
+    
+        <button class="btn btn-primary" [disabled]="!allowNewServer" (click)='onCreateServer()'>Clock me</button> {{
+        allowNewServer }}
+    
+        <p *ngIf='enableServerName; else noServer'> Server created succesfully, the name is {{serverName}}</p>
+        <ng-template #noServer>
+            <p> No server created yet.</p>
+        </ng-template>
+    
+        <ul>
+            <li><p [ngStyle]="{backgroundColor: getColor1()}" [ngClass]="{online: serverStatus1 === 'online'}">Server 1 is {{serverStatus1}}</p></li>
+            <li><p [ngStyle]="{backgroundColor: getColor2()}" [ngClass]="{online: serverStatus2 === 'online'}">Server 2 is {{serverStatus2}}</p></li>
+        </ul>
+    
+        <!-- <p>{{ serverName }}</p> -->
     </ul>
-
-    <!-- <p>{{ serverName }}</p> -->
-</ul>
+</section>
